--- a/config/server.yaml
+++ b/config/server.yaml
@@ -69,7 +69,7 @@ retrieval:
 
 # Internet search configuration (optional)
 internet_search:
-  enabled: false  # Set to true to enable web search
+  enabled: true   # Set to true to enable web search
   provider: "duckduckgo"  # or "google", "bing"
   max_results: 20
   timeout: 30
